# orc-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: column_reader.rs  compression.rs  io_utils.rs  lib.rs  reader.rs  schema.rs  source.rs  stripe.rs  tail.rs  test_utils.rs
src/column_reader/: binary_reader.rs  boolean_reader.rs  complex_type_reader.rs  datetime_reader.rs  mod.rs  numeric_reader.rs  numeric_readers.rs
src/encoding/: mod.rs  rle.rs  rlev1.rs  rlev2.rs
src/test/: matchers.rs  mod.rs
