[package]
name = "orc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.1"
prost = "0.11.2"
arrow = "33.0.0"
snap = "1.1.0"
zstd = "0.12.1+zstd.1.5.2"
lz4_flex = { version = "0.10.0", default-features = false, features = [
    "checked-decode",
    "frame",
] }
flate2 = "1.0.25"

[dev-dependencies]
googletest = "0.4.1"
similar = "2.2.1"
colored = "2"

[build-dependencies]
prost-build = { version = "0.11.0" }
